Fix all links in search result being stretched

--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -87,7 +87,7 @@
     font-size: var(--#{$prefix}search-result-url-font-size);
   }
 
-  a {
+  &-link {
     @extend .stretched-link;
     text-decoration: none;
   }
